--- a/styles/home.css
+++ b/styles/home.css
@@ -10,7 +10,8 @@ body {
     justify-content: center; */
 
     width: 100%;
-    background-color: blueviolet;
+    height: 100%;
+    background-color: white;
     display: grid;
     grid-template-columns: 80%;
     gap: 80px;
@@ -38,7 +39,7 @@ body {
     height: 424px;
     padding-left: 70px;
     padding-top: 30px;
-    
+
 }
 
 .banner-heading {
@@ -54,6 +55,7 @@ body {
     width: 440px;
     margin-bottom: 20px;
 }
+
 .banner-button {
     text-decoration: none;
     padding: 3%;
@@ -63,7 +65,8 @@ body {
     color: white;
 
 }
-.banner-image{
+
+.banner-image {
     padding-top: 5%;
     padding-right: 35px;
     height: 531px;
@@ -81,7 +84,7 @@ body {
     gap: 20px;
     justify-content: center;
     width: 100%;
-    background-color: blanchedalmond;
+    background-color: white;
     border-radius: 25px;
 }
 
@@ -133,6 +136,7 @@ body {
 
 .article {
     background-color: white;
+    border: 1px solid rgb(236, 228, 228);
     border-radius: 15px;
     height: 309px;
 
@@ -141,12 +145,13 @@ body {
 .article-image {
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 15px;
 }
 
 .article-button {
     text-decoration: none;
     /* background-color: white; */
-    border: 1px solid rgb(98, 94, 94);
+    border: 1.5px solid rgb(98, 94, 94);
     border-radius: 5px;
     padding: 3px 10px;
     margin-left: 15px;
@@ -164,13 +169,39 @@ body {
     color: rgb(144, 141, 141);
 }
 
-.flags{
+.flags-article {
+    background-color: white;
+    border-radius: 15px;
+    height: 180px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 5px;
+    /* flex-direction: column; */
+    justify-content: center;
+}
+
+.flags {
     display: flex;
     column-gap: 10px;
+    justify-content: center;
 }
-.flags img{
-    size: 30%;
+
+.flags img {
+    width: 30%;
+    margin-top: 10%;
 }
+
+.flag-details {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.flag-info {
+    font-size: 15px;
+    font-weight: 200;
+    color: rgb(129, 125, 125);
+}
+
 /*------------------
     Footer section
 --------------------*/
