--- a/styles/style.css
+++ b/styles/style.css
@@ -11,11 +11,11 @@ body {
 .container {
     width: 100%;
     height: 100%;
-    background-color: white;
     display: grid;
     grid-template-columns: 80%;
-    gap: 80px;
+    row-gap: 100px;
     justify-content: center;
+    /* background-color: aqua; */
 }
 
 /*--------------
@@ -24,19 +24,20 @@ body {
 
 .banner {
     background-color: black;
-    width: 1000px;
-    height: 558px;
+    width: 100%;
+    height: 90%;
     border-radius: 25px;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    align-items: center;
+    margin-top: 5%;
 }
 
 .banner-info {
-    width: 531px;
-    height: 424px;
-    padding-left: 70px;
-    padding-top: 30px;
+    width: 100%;
+    height: 100%;
+    padding-left: 10%;
+    padding-top: 5%;
 }
 
 .banner-heading {
@@ -47,9 +48,9 @@ body {
 
 .banner-description {
     color: white;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 400;
-    width: 440px;
+    width: 100%;
     margin-bottom: 20px;
 }
 
@@ -63,9 +64,7 @@ body {
 }
 
 .banner-image {
-    padding-top: 5%;
-    padding-right: 35px;
-    height: 531px;
+    height: 430px;
 }
 
 /*------------------
@@ -121,6 +120,7 @@ body {
 --------------------*/
 .articles {
     width: 80%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
@@ -221,7 +221,7 @@ body {
 
 .home-footer-buttons {
     display: flex;
-    column-gap: 20px;
+    gap: 10px;
     justify-content: center;
 
 }
@@ -229,6 +229,91 @@ body {
 .home-footer-button {
     text-decoration: none;
     color: rgb(168, 165, 165);
-    padding: 20px;
+    padding: 10px;
     text-align: center;
+}
+
+/*------------------
+   Media Queries
+--------------------*/
+
+/* Mobile */
+@media only screen and (max-width: 688px) {
+
+    .container {
+        gap: 5px;
+        /* background-color: blue; */
+    }
+
+    .banner {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .banner-info {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* background-color: bisque; */
+    }
+
+    .banner-image {
+        width: 100%;
+        height: 87.2%;
+        /* background-color: brown; */
+    }
+
+    .main {
+        flex-direction: column;
+    }
+
+    .side-bar {
+        background-color: white;
+        gap: 15px;
+        align-items: center;
+        width: 100%;
+        /* background-color: blue; */
+    }
+
+    .side-button {
+        background-color: white;
+        padding: 2% 10%;
+        align-items: center;
+        border: 1px solid rgb(189, 182, 182);
+        border-radius: 10px;
+    }
+
+    .uniq-color-button {
+        background-color: rgb(199, 65, 8);
+    }
+
+    .articles {
+        grid-template-columns: repeat(1, 1fr);
+        /* background-color: blueviolet; */
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .article {
+        background-color: white;
+        border: 1px solid rgb(221, 217, 217);
+        border-radius: 15px;
+        height: 309px;
+    }
+
+    .article-image {
+        height: 40%;
+    }
+
+    .home-footer {
+        height: 100%;
+    }
+
+    .home-footer-buttons {
+        flex-direction: column;
+
+    }
+
 }
