--- a/styles/style.css
+++ b/styles/style.css
@@ -51,7 +51,7 @@ body {
     font-size: 13px;
     font-weight: 400;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .banner-button {
@@ -64,7 +64,8 @@ body {
 }
 
 .banner-image {
-    height: 430px;
+    padding-top: 5%;
+    height: 550px;
 }
 
 /*------------------
@@ -219,10 +220,12 @@ body {
     width: 80%;
 }
 
-.home-footer-buttons {
+.home-footer-buttons,
+.social-icon {
     display: flex;
-    gap: 10px;
+    gap: 45px;
     justify-content: center;
+    margin-bottom: 40px;
 
 }
 
@@ -231,6 +234,24 @@ body {
     color: rgb(168, 165, 165);
     padding: 10px;
     text-align: center;
+    font-size: 12px;
+
+}
+
+.fa-brands {
+
+    font-size: 60px;
+
+}
+
+.fa-linkedin-in {
+    color: rgb(83, 224, 240);
+}
+.fa-facebook-f {
+    color: blue;
+}
+.fa-twitter {
+    color: rgb(13, 142, 241);
 }
 
 /*------------------
@@ -260,7 +281,7 @@ body {
 
     .banner-image {
         width: 100%;
-        height: 87.2%;
+        height: 91%;
         /* background-color: brown; */
     }
 
@@ -273,7 +294,7 @@ body {
         gap: 15px;
         align-items: center;
         width: 100%;
-        /* background-color: blue; */
+        height: fit-content;
     }
 
     .side-button {
@@ -315,5 +336,65 @@ body {
         flex-direction: column;
 
     }
+
+}
+
+
+/* Tablet */
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+
+    .container {
+        gap: 5px;
+        /* background-color: blue; */
+    }
+
+    .banner-heading {
+        font-size: 30px;
+    }
+
+    .banner-image {
+        width: 90%;
+        height: 370px;
+    }
+
+    .main {
+        flex-direction: column;
+        /* align-items: center; */
+    }
+
+    .side-bar {
+        background-color: white;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: fit-content;
+        width: 100%;
+
+    }
+
+    .side-button {
+        background-color: white;
+        padding: 2% 3%;
+        border: 1px solid rgb(189, 182, 182);
+        /* width: 100%; */
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .uniq-color-button {
+        background-color: rgb(199, 65, 8);
+    }
+
+    .articles {
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+
+    .article-image {
+        height: 40%;
+    }
+
+    /* .home-footer-button {
+        font-size: 20px;
+    } */
 
 }
