--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    background-color: rgb(207, 234, 234);
 }
 
 /*--------------
@@ -15,7 +16,7 @@ body {
     grid-template-columns: 80%;
     row-gap: 100px;
     justify-content: center;
-    /* background-color: aqua; */
+    background-color: rgb(207, 234, 234);
 }
 
 /*--------------
@@ -23,7 +24,7 @@ body {
 ----------------*/
 
 .banner {
-    background-color: black;
+    background-color: rgba(124, 206, 241, 0.61);
     width: 100%;
     height: 90%;
     border-radius: 25px;
@@ -41,17 +42,17 @@ body {
 }
 
 .banner-heading {
-    color: white;
-    font-size: 50px;
+    color: black;
+    font-size: 40px;
     font-weight: 700;
 }
 
 .banner-description {
-    color: white;
-    font-size: 13px;
+    color: black;
+    font-size: 12px;
     font-weight: 400;
     width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 35px;
 }
 
 .banner-button {
@@ -59,13 +60,37 @@ body {
     padding: 3%;
     font-size: 20px;
     border-radius: 5%;
-    background-image: linear-gradient(rgb(228, 76, 16), rgb(255, 16, 16));
+    background-image: linear-gradient(rgb(134, 85, 85), rgb(152, 3, 3));
     color: white;
 }
 
-.banner-image {
-    padding-top: 5%;
-    height: 550px;
+.bonus-animation {
+    width: 2px;
+    height: 2px;
+    Position: relative;
+    left: 70px;
+
+}
+
+@keyframes sliding {
+    from {
+        height: 5px;
+        width: 5px;
+        bottom: 0;
+    }
+
+    to {
+        height: 60px;
+        width: 60px;
+        top: 0;
+    }
+
+}
+
+.banner:hover .bonus-animation {
+    animation: sliding 1s ease-in-out 0s infinite alternate;
+    animation-play-state: running;
+    position: relative;
 }
 
 /*------------------
@@ -78,7 +103,7 @@ body {
     gap: 20px;
     justify-content: center;
     width: 100%;
-    background-color: white;
+    background-color: rgb(207, 234, 234);
     border-radius: 25px;
 }
 
@@ -111,9 +136,9 @@ body {
 }
 
 .uniq-color-button {
-    color: white;
+    color: rgb(243, 233, 233);
     font-size: 15px;
-    background-color: rgb(199, 65, 8);
+    background-image: linear-gradient(rgb(134, 85, 85), rgb(152, 3, 3));
 }
 
 /*------------------
@@ -129,10 +154,10 @@ body {
 }
 
 .article {
-    background-color: white;
-    border: 1px solid rgb(236, 228, 228);
+    background-color: rgb(207, 234, 234);
+    border: 2px solid rgb(186, 182, 182);
     border-radius: 15px;
-    height: 309px;
+    height: 380px;
 }
 
 .article-image {
@@ -165,11 +190,11 @@ body {
     margin-bottom: 20px;
 }
 
-.flags-article {
-    background-color: white;
-    border: 1px solid rgb(236, 228, 228);
+.Match-blog {
+    background-color: rgb(207, 234, 234);
+    border: 1px solid rgb(150, 149, 149);
     border-radius: 15px;
-    height: 180px;
+    height: 200px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     row-gap: 5px;
@@ -177,23 +202,27 @@ body {
     justify-content: center;
 }
 
-.flags {
+.Live-Matches {
     display: flex;
-    column-gap: 10px;
+    column-gap: 20px;
     justify-content: center;
 }
 
-.flags img {
+.Live-Matches h2 {
+    margin-top: 50px;
+}
+
+.Live-Matches img {
     width: 30%;
     margin-top: 10%;
 }
 
-.flag-details {
+.Match-details {
     text-align: center;
     margin-bottom: 10px;
 }
 
-.flag-info {
+.Match-info {
     font-size: 15px;
     font-weight: 200;
     color: rgb(129, 125, 125);
@@ -202,56 +231,101 @@ body {
 /*------------------
     Footer section
 --------------------*/
-.home-footer {
+.footer {
     background-color: black;
     width: 100%;
     height: 350px;
 }
 
-.home-footer-heading {
+.footer-heading {
     color: white;
     font-size: 40px;
     text-align: center;
     padding-top: 90px;
 }
 
-.home-footer hr {
+.footer hr {
     border: 0.5px solid rgb(90, 87, 87);
     width: 80%;
 }
 
-.home-footer-buttons,
+.footer-buttons,
 .social-icon {
     display: flex;
     gap: 45px;
     justify-content: center;
     margin-bottom: 40px;
-
 }
 
-.home-footer-button {
+.footer-button {
     text-decoration: none;
     color: rgb(168, 165, 165);
     padding: 10px;
     text-align: center;
     font-size: 12px;
-
 }
 
 .fa-brands {
-
     font-size: 60px;
-
 }
 
 .fa-linkedin-in {
     color: rgb(83, 224, 240);
 }
+
 .fa-facebook-f {
     color: blue;
 }
+
 .fa-twitter {
     color: rgb(13, 142, 241);
+}
+
+/*------------------
+   Bonus part
+--------------------*/
+
+/* Button */
+.bonus-button {
+    text-decoration: none;
+    padding: 1% 2%;
+    font-size: 20px;
+    border-radius: 5%;
+    background-image: linear-gradient(rgb(134, 85, 85), rgb(152, 3, 3));
+    color: white;
+    margin-left: 45%;
+    display: none;
+}
+
+
+/* Animation */
+.bonus-animation {
+    width: 10px;
+    height: 10px;
+    Position: relative;
+    right: 10px;
+
+}
+
+@keyframes sliding {
+    from {
+        height: 10px;
+        width: 10px;
+        bottom: 0;
+    }
+
+    to {
+        height: 100px;
+        width: 100px;
+        top: 0;
+    }
+
+}
+
+.bonus-animation {
+    animation: sliding 1s ease-in-out 0s infinite alternate;
+    animation-play-state: running;
+    position: relative;
 }
 
 /*------------------
@@ -328,13 +402,22 @@ body {
         height: 40%;
     }
 
-    .home-footer {
+    .Match-blog {
+        height: 250px;
+    }
+
+
+    .footer {
         height: 100%;
     }
 
-    .home-footer-buttons {
+    .footer-buttons {
         flex-direction: column;
 
+    }
+
+    .bonus-animation {
+        display: none;
     }
 
 }
@@ -357,13 +440,18 @@ body {
         height: 370px;
     }
 
+    .banner-description {
+        margin-bottom: 40px;
+    }
+
     .main {
         flex-direction: column;
         /* align-items: center; */
     }
 
     .side-bar {
-        background-color: white;
+        background-color: rgb(207, 234, 234);
+        ;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         height: fit-content;
@@ -393,8 +481,14 @@ body {
         height: 40%;
     }
 
-    /* .home-footer-button {
-        font-size: 20px;
-    } */
+    /* -----------------
+        bonus-button
+    -------------------- */
+    .bonus-button {
+        display: inline-block
+    }
 
+    .bonus-animation {
+        display: none;
+    }
 }
